# surv_server

./: .env.example  .gitignore  Dockerfile  README.md  docker_build.sh  pyproject.toml  setenv.sh  setenv_local.sh  surv_docker_install_example.sh
dev_env/: docker-compose.yml
src/: async_main.py  ftp_server.py  main.py  surv_server.py
src/surv_server/: settings.py
src/surv_server/cameras/: cameras.py
src/surv_server/client_api/: app.py
src/surv_server/crypto/: crypto.py
src/surv_server/ftp/: ftp_listeners.py  ftp_server.py  ftp_user_manager.py  video_ftp_handler.py
src/surv_server/migrations/surv_server/: 0_20220605235628_init.sql  1_20220214005438_update.sql
src/surv_server/sys_admin_api/: app.py
src/surv_server/telegram_bot/: surv_server_telegram_bot.py
src/surv_server/tortoise/: db.py  models.py
