[tool.poetry]
name = "surv_server"
version = "0.1.0"
description = ""
authors = ["Mikhail Viktorov <mviktorov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyftpdlib = "^1.5.6"
python-telegram-bot = "^13.10"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
