[tool.poetry]
name = "surv_server"
version = "0.1.0"
description = ""
authors = ["Mikhail Viktorov <mviktorov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.10"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.18.1"}
aerich = "^0.6.2"
aioftp = "^0.20.0"
bcrypt = "^3.2.2"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[tool.aerich]
tortoise_orm = "surv_server.tortoise.db.TORTOISE_ORM"
location = "./src/surv_server/migrations"
src_folder = "./src"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
